# upjar

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml  build_release.yml  release.yml  rust.yml
example/: build.jsonc
resources/jsons/: getJar.json  getModuloJava.json  postCriaModulo.json  postDeleteJar.json
src/: build.json  lib.rs  main.rs  resources.rs
src/api/: get_existing_jar.rs  get_existing_module.rs  post_add_jar.rs  post_delete_jar.rs  post_file.rs  post_login.rs  post_modulo.rs
src/auth/: login.rs  logout.rs
src/commands/: mod.rs  post_modulo_java.rs
src/schemas/: builder_config.rs  login_schema.rs  logout_schema.rs  mod.rs
src/utils/: multipart.rs  replace_param.rs  string_utils.rs
