[package]
name = "upjar"
version = "0.1.2"
edition = "2021"
authors = ["Luis Ricardo Alves Santos"]
description = "Lib for updating/creating java modules for Sankhya ERP"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
serde_json = "1.0.91"
regex = "1"
serde = { version = "1.0.152", features = ["derive"] }
reqwest = { version = "0.11.14", default-features = false, features = ["cookies","stream","multipart","json","default-tls"] }
tokio = { version = "1.27.0", features = ["macros","rt-multi-thread"] }
tokio-util = { version = "0.7.7", features = ["codec"] }
rust-embed="6.6.1"